--- a/views/partials/admin-nav.ejs
+++ b/views/partials/admin-nav.ejs
@@ -34,13 +34,13 @@
           <span class="align-self-center">แดชบอร์ด</span>
         </a>
       </li>
-      <!-- <li class="nav-item ripple" data-mdb-ripple-color="light">
+      <li class="nav-item ripple" data-mdb-ripple-color="light">
         <a class="admin-navlink <%= currentLink == "order" ? 'admin-nav-active' : '' %>" href="/admin/orders">
           <i class="fas fa-clipboard-list"></i>
           <span class="align-self-center">ออเดอร์</span>
         </a>
-      </li> -->
-
+      </li>
+<!-- 
       <li class="nav-item ripple <%= currentLink == 'order' || currentLink == "payment" ? 'shadow-4-strong' : " "%> "
         data-mdb-ripple-color="light">
         <div class="admin-navlink admin-dropdown" id="sale-btn" data-mdb-toggle="collapse" data-mdb-target="#sale">
@@ -57,7 +57,7 @@
             <span class="ms-5 align-self-center">แจ้งชำระเงิน</span>
           </a>
         </div>
-      </li>
+      </li> -->
 
 
       <!-- <li class="nav-item ripple" data-mdb-ripple-color="light">
