--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -39,28 +39,34 @@
   <div class="container-lg mb-5 ">
     <div class="mt-3">
       <% if(success_msg != "") { %>
-        <% success_msg.forEach((item) => { %>
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <strong><%- item %></strong> 
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        <% }); %>
-        <% }else if(errors != "") {%> warnings
-        <% errors.forEach((item) => { %>
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <strong><%- item %></strong> 
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        <% }); %>
-        <% }else if(warnings != ""){ %>
-          <% warnings.forEach((item) => { %>
-          <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong><%- item %></strong> 
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        <% }); %>
+      <% success_msg.forEach((item) => { %>
+      <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong><%- item %></strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      <% }); %>
+      <% }else if(errors != "") {%>
+      <% errors.forEach((item) => { %>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong><%- item %></strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      <% }); %>
+      <% }else if(warnings != ""){ %>
+      <% warnings.forEach((item) => { %>
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong><%- item %></strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      <% }); %>
+      <% } %>
 
-        <% } %>
+      <% if (typeof close !== 'undefined' && close === '1') { %>      
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+        <strong>ปิดบัญชีเรียบร้อยแล้ว</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      <% } %>
     </div>
     <div class="d-flex">
       <div class="login card py-5 mt-2">
@@ -71,13 +77,13 @@
           <h3 class="mb-5 text-center">เข้าสู่ระบบ</h3>
           <!-- username input -->
           <div class="form-outline mb-4">
-            <input type="text" id="form1Example1" class="form-control" name="username" value="test" required/>
+            <input type="text" id="form1Example1" class="form-control" name="username" value="test" required />
             <label class="form-label" for="form1Example1">ชื่อผู้ใช้</label>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-4">
-            <input type="password" id="form1Example2" class="form-control" name="password" value="123456" required/>
+            <input type="password" id="form1Example2" class="form-control" name="password" value="123456" required />
             <label class="form-label" for="form1Example2">รหัสผ่าน</label>
           </div>
 
@@ -113,8 +119,8 @@
   </div>
   <script src="/js/validateBs.js"></script>
   <script>
-            document.querySelectorAll('.form-outline').forEach((formOutline) => {
-            new mdb.Input(formOutline).init();
-        });
+    document.querySelectorAll('.form-outline').forEach((formOutline) => {
+      new mdb.Input(formOutline).init();
+    });
   </script>
 </body>
