--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -20,7 +20,7 @@
                     <div class="w-100">
                         <div class="form-outline mb-4">
                             <input type="text" id="username" name="username" class="form-control"
-                                pattern="[A-Za-z]+[0-9]+{15}" required />
+                                pattern="[A-Za-z0-9]+" minlength="6" maxlength="15" required />
                             <label class="form-label" for="form1Example1">ชื่อผู้ใช้</label>
                             <div class="invalid-feedback">
                                 ชื่อผู้ใช้ต้องเป็นอักขระและตัวเลขไม่เกิน 15 ตัวอักษร
@@ -34,11 +34,11 @@
                 <div class="d-flex  my-3">
                     <div class="w-100">
                         <div class="form-outline mb-4">
-                            <input type="password" id="password" name="password" class="form-control" 
+                            <input type="password" id="password" name="password" class="form-control" minlength="6"
                                 pattern="[A-Za-z0-9]+" required />
                             <label class="form-label" for="form1Example2">รหัสผ่าน</label>
                             <div class="invalid-feedback">
-                                รหัสผ่านต้องเป็นอักขระและตัวเลขเท่านั้น
+                                รหัสผ่านต้องเป็นอักขระและตัวเลขอย่างต่ำ 6 ตัวและไม่เกิน 
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="d-flex  my-3">
                     <div class="w-100">
                         <div class="form-outline mb-4">
-                            <input type="password" id="confirmpassword" name="confirmpassword" class="form-control"
+                            <input type="password" id="confirmpassword" name="confirmpassword" class="form-control" minlength="6"
                                 required  pattern="[A-Za-z0-9]+"/>
                             <label class="form-label" for="form1Example2">ยืนยันรหัสผ่าน</label>
                             <div class="invalid-feedback">
